start on first item for slider and fixed overlap on link

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -68,8 +68,10 @@
     margin: -50px 0 100px 0;
 }
 #p-title{
-    margin-top: -50px;
-    padding-bottom: 50px;  
+    margin-top: -70px;
+    padding-bottom: 50px;
+    position: relative;
+    z-index: 2;
 }
 
 /** SIDEBAR **/
